@@ -1,35 +1,12 @@
-/**********************************************************************************************************************
- * garbagecat                                                                                                         *
- *                                                                                                                    *
- * Copyright (c) 2008-2016 Red Hat, Inc.                                                                              *
- *                                                                                                                    * 
- * All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse *
- * Public License v1.0 which accompanies this distribution, and is available at                                       *
- * http://www.eclipse.org/legal/epl-v10.html.                                                                         *
- *                                                                                                                    *
- * Contributors:                                                                                                      *
- *    Red Hat, Inc. - initial API and implementation                                                                  *
- *********************************************************************************************************************/
-package org.eclipselabs.garbagecat;
+package org.eclipselabs.garbagecat; 
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileWriter;
-import java.io.IOException;
+import io.file.ReadFile;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import main.MainTask;
 
-/*import org.apache.commons.cli.BasicParser;
-import org.apache.commons.cli.CommandLine;
-import org.apache.commons.cli.CommandLineParser;
-import org.apache.commons.cli.HelpFormatter;
-import org.apache.commons.cli.Options;
-import org.apache.commons.cli.ParseException; */
 import org.eclipselabs.garbagecat.domain.JvmRun;
 import org.eclipselabs.garbagecat.service.GcManager;
 import org.eclipselabs.garbagecat.util.Constants;
@@ -39,195 +16,16 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
 import org.eclipselabs.garbagecat.util.jdk.JdkUtil.LogEventType;
 import org.eclipselabs.garbagecat.util.jdk.Jvm;
 
-/**
- * <p>
- * Garbage Cat main class. A controller that prepares the model (by parsing GC log entries) and provides analysis (the
- * report view).
- * </p>
- * 
- * @author <a href="mailto:mmillson@redhat.com">Mike Millson</a>
- * 
- */
-public class Main {
+public class GCMain extends MainTask {
+    
+    public GCMain(String[] args) {
+        super();
+        parseArgs(args);
+    }
 
-    /**
-     * The maximum number of rejected log lines to track. A throttle to limit memory consumption.
-     */
     public static final int REJECT_LIMIT = 1000;
 
-    //private static Options options;
-
-    static {
-        // Declare command line options
-        options = new Options();
-        options.addOption(Constants.OPTION_HELP_SHORT, Constants.OPTION_HELP_LONG, false, "help");
-        options.addOption(Constants.OPTION_JVMOPTIONS_SHORT, Constants.OPTION_JVMOPTIONS_LONG, true,
-                "JVM options used during JVM run");
-        options.addOption(Constants.OPTION_PREPROCESS_SHORT, Constants.OPTION_PREPROCESS_LONG, false,
-                "preprocessing flag");
-        options.addOption(Constants.OPTION_STARTDATETIME_SHORT, Constants.OPTION_STARTDATETIME_LONG, true,
-                "JVM start datetime (yyyy-MM-dd HH:mm:ss,SSS) for converting GC logging timestamps to datetime");
-        options.addOption(Constants.OPTION_THRESHOLD_SHORT, Constants.OPTION_THRESHOLD_LONG, true,
-                "threshold (0-100) for throughput bottleneck reporting");
-        options.addOption(Constants.OPTION_REORDER_SHORT, Constants.OPTION_REORDER_LONG, false,
-                "reorder logging by timestamp");
-        options.addOption(Constants.OPTION_OUTPUT_SHORT, Constants.OPTION_OUTPUT_LONG, true,
-                "output file name (default " + Constants.OUTPUT_FILE_NAME + ")");
-    }
-
-    /**
-     * @param args
-     *            The argument list includes one or more scope options followed by the name of the gc log file to
-     *            inspect.
-     */
-    public static void main(String[] args) {
-
-        CommandLine cmd = null;
-
-        try {
-            cmd = parseOptions(args);
-        } catch (ParseException pe) {
-            System.out.println(pe.getMessage());
-            usage(options);
-        }
-
-        if (cmd != null) {
-            if (cmd.hasOption(Constants.OPTION_HELP_LONG)) {
-                usage(options);
-            } else {
-
-                // Determine JVM environment information.
-                Date jvmStartDate = null;
-                if (cmd.hasOption(Constants.OPTION_STARTDATETIME_LONG)) {
-                    jvmStartDate = GcUtil.parseStartDateTime(cmd.getOptionValue(Constants.OPTION_STARTDATETIME_SHORT));
-                }
-                String jvmOptions = null;
-                if (cmd.hasOption(Constants.OPTION_JVMOPTIONS_LONG)) {
-                    jvmOptions = cmd.getOptionValue(Constants.OPTION_JVMOPTIONS_SHORT);
-                }
-
-                String logFileName = (String) cmd.getArgList().get(cmd.getArgList().size() - 1);
-                File logFile = new File(logFileName);
-
-                GcManager jvmManager = new GcManager();
-
-                // Do preprocessing
-                if (cmd.hasOption(Constants.OPTION_PREPROCESS_LONG)) {
-                    /*
-                     * Requiring the JVM start date/time for preprocessing is a hack to handle datestamps. When
-                     * garbagecat was started there was no <code>-XX:+PrintGCDateStamps</code> option. When it was
-                     * introduced in JDK 1.6 update 4, the easiest thing to do to handle datestamps was to preprocess
-                     * the datestamps and convert them to timestamps.
-                     * 
-                     * TODO: Handle datetimes separately from preprocessing so preprocessing doesn't require passing in
-                     * the JVM start date/time.
-                     */
-                    logFile = jvmManager.preprocess(logFile, jvmStartDate);
-                }
-
-                // Allow logging to be reordered?
-                boolean reorder = false;
-                if (cmd.hasOption(Constants.OPTION_REORDER_LONG)) {
-                    reorder = true;
-                }
-
-                // Store garbage collection logging in data store.
-                jvmManager.store(logFile, reorder);
-
-                // Create report
-                Jvm jvm = new Jvm(jvmOptions, jvmStartDate);
-                // Determine report options
-                int throughputThreshold = Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD;
-                if (cmd.hasOption(Constants.OPTION_THRESHOLD_LONG)) {
-                    throughputThreshold = Integer.parseInt(cmd.getOptionValue(Constants.OPTION_THRESHOLD_SHORT));
-                }
-                JvmRun jvmRun = jvmManager.getJvmRun(jvm, throughputThreshold);
-                String outputFileName;
-                if (cmd.hasOption(Constants.OPTION_OUTPUT_LONG)) {
-                    outputFileName = cmd.getOptionValue(Constants.OPTION_OUTPUT_SHORT);
-                } else {
-                    outputFileName = Constants.OUTPUT_FILE_NAME;
-                }
-                createReport(jvmRun, outputFileName);
-            }
-        }
-    }
-
-    /**
-     * Parse command line options.
-     * 
-     * @return
-     */
-    private static final CommandLine parseOptions(String[] args) throws ParseException {
-        CommandLineParser parser = new BasicParser();
-        CommandLine cmd = null;
-        // Allow user to just specify help.
-        if (args.length == 1 && (args[0].equals("-" + Constants.OPTION_HELP_SHORT)
-                || args[0].equals("--" + Constants.OPTION_HELP_LONG))) {
-            usage(options);
-        } else {
-            cmd = parser.parse(options, args);
-            validateOptions(cmd);
-        }
-        return cmd;
-    }
-
-    /**
-     * Output usage help.
-     * 
-     * @param options
-     */
-    private static void usage(Options options) {
-        // Use the built in formatter class
-        //HelpFormatter formatter = new HelpFormatter();
-        //formatter.printHelp("garbagecat [OPTION]... [FILE]", options);
-    }
-
-    /**
-     * Validate command line options.
-     * 
-     * @param cmd
-     *            The command line options.
-     */
-    public static void validateOptions(CommandLine cmd) throws ParseException {
-        // Ensure log file specified.
-        if (cmd.getArgList().size() == 0) {
-            throw new ParseException("Missing log file");
-        }
-        String logFileName = null;
-        if (cmd.getArgList().size() > 0) {
-            logFileName = (String) cmd.getArgList().get(cmd.getArgList().size() - 1);
-        }
-        // Ensure gc log file exists.
-        if (logFileName == null) {
-            throw new ParseException("Missing log file not");
-        }
-        File logFile = new File(logFileName);
-        if (!logFile.exists()) {
-            throw new ParseException("Invalid log file: '" + logFileName + "'");
-        }
-        // threshold
-        if (cmd.hasOption(Constants.OPTION_THRESHOLD_LONG)) {
-            String thresholdRegEx = "^\\d{1,3}$";
-            String thresholdOptionValue = cmd.getOptionValue(Constants.OPTION_THRESHOLD_SHORT);
-            Pattern pattern = Pattern.compile(thresholdRegEx);
-            Matcher matcher = pattern.matcher(thresholdOptionValue);
-            if (!matcher.find()) {
-                throw new ParseException("Invalid threshold: '" + thresholdOptionValue + "'");
-            }
-        }
-        // startdatetime
-        if (cmd.hasOption(Constants.OPTION_STARTDATETIME_LONG)) {
-            String startdatetimeOptionValue = cmd.getOptionValue(Constants.OPTION_STARTDATETIME_SHORT);
-            Pattern pattern = Pattern.compile(GcUtil.START_DATE_TIME_REGEX);
-            Matcher matcher = pattern.matcher(startdatetimeOptionValue);
-            if (!matcher.find()) {
-                throw new ParseException("Invalid startdatetime: '" + startdatetimeOptionValue + "'");
-            }
-        }
-    }
-
-    /**
+        /**
      * Create Garbage Collection Analysis report.
      * 
      * @param jvmRun
@@ -236,13 +34,13 @@ public class Main {
      *            Output report file name.
      * 
      */
-    public static void createReport(JvmRun jvmRun, String reportFileName) {
-        File reportFile = new File(reportFileName);
-        FileWriter fileWriter = null;
-        BufferedWriter bufferedWriter = null;
+    public void createReport(JvmRun jvmRun, String reportFileName) {
+        java.io.File reportFile = new java.io.File(reportFileName);
+        java.io.FileWriter fileWriter = null;
+        java.io.BufferedWriter bufferedWriter = null;
         try {
-            fileWriter = new FileWriter(reportFile);
-            bufferedWriter = new BufferedWriter(fileWriter);
+            fileWriter = new java.io.FileWriter(reportFile);
+            bufferedWriter = new java.io.BufferedWriter(fileWriter);
 
             // Bottlenecks
             List<String> bottlenecks = jvmRun.getBottlenecks();
@@ -289,7 +87,7 @@ public class Main {
                 bufferedWriter.write("Event Types: ");
                 List<LogEventType> eventTypes = jvmRun.getEventTypes();
                 Iterator<LogEventType> iterator = eventTypes.iterator();
-                boolean firstEvent = true;
+                boolean firstEvent = true;           
                 while (iterator.hasNext()) {
                     LogEventType eventType = iterator.next();
                     // Only report GC events
@@ -360,8 +158,8 @@ public class Main {
 
                 // Determine analysis levels
                 List<String> error = new ArrayList<String>();
-                List<String> warn = new ArrayList<String>();
-                List<String> info = new ArrayList<String>();
+                List<String> warn  = new ArrayList<String>();
+                List<String> info  = new ArrayList<String>();
 
                 Iterator<String> iterator = analysisKeys.iterator();
                 while (iterator.hasNext()) {
@@ -419,7 +217,7 @@ public class Main {
                 printHeader = true;
                 while (iterator.hasNext()) {
                     if (printHeader) {
-                        bufferedWriter.write(
+                       bufferedWriter.write(
                                 "----------------------------------------" + System.getProperty("line.separator"));
                         bufferedWriter.write("info" + System.getProperty("line.separator"));
                         bufferedWriter.write(
@@ -449,27 +247,59 @@ public class Main {
                 }
                 bufferedWriter.write("========================================" + System.getProperty("line.separator"));
             }
-        } catch (FileNotFoundException e) {
+        } catch (java.io.FileNotFoundException e) {
             e.printStackTrace();
-        } catch (IOException e) {
+        } catch (java.io.IOException e) {
             e.printStackTrace();
         } finally {
             // Close streams
             if (bufferedWriter != null) {
                 try {
                     bufferedWriter.close();
-                } catch (IOException e) {
+                } catch (java.io.IOException e) {
                     e.printStackTrace();
                 }
             }
             if (fileWriter != null) {
                 try {
                     fileWriter.close();
-                } catch (IOException e) {
+                } catch (java.io.IOException e) {
                     e.printStackTrace();
                 }
             }
         }
+                             
     }
+    
+    public void scan() {
+        boolean reorder = true;
+        String jvmOptions =null; 
+        Date   jvmStartDate= new Date();
+        GcManager jvmManager = new GcManager();
+        ReadFile f = new ReadFile( getProperty("logfile") );
+        
+        System.out.println("logFile:"+f.getFQDNFileName());
+        // Store garbage collection logging in data store.
+        jvmManager.store(f.getFile(), reorder);
 
+                // Create report
+                Jvm jvm = new Jvm(jvmOptions, jvmStartDate);
+                // Determine report options
+                int throughputThreshold = Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD;
+                //if (cmd.hasOption(Constants.OPTION_THRESHOLD_LONG)) {
+                 //   throughputThreshold = Integer.parseInt(cmd.getOptionValue(Constants.OPTION_THRESHOLD_SHORT));
+                //}
+                JvmRun jvmRun = jvmManager.getJvmRun(jvm, throughputThreshold);
+                String outputFileName=getProperty("out");
+                System.out.println("outfile:"+outputFileName);
+                createReport(jvmRun, outputFileName);
+
+
+        
+    }
+    
+    public static void main(String[] args) {
+                GCMain m = new GCMain(args);
+                m.scan();
+    }
 }
